[package]
name = "iou"
version = "0.1.0"
edition = "2018"
description = "Insecure Open URL (IOU) - Insecurely receive URLs over http and open them in a browser. Intended for local use only!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.11"
clap = "2"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
